--- a/src/styles.css
+++ b/src/styles.css
@@ -9,14 +9,14 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #7714b08f;
+    background-color: #7714b0a8;
 }
 
 .calculator {
     width: 353px;
-    background: linear-gradient(135deg, #553e86, #863c96);
+    background: linear-gradient(135deg, #553e86, #9d2eb6f0);
     border-radius: 12px;
-    box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 16px rgba(0, 0, 0, 0.2);
     padding: 30px;
 }
 
@@ -25,8 +25,8 @@ body {
     height: 70px;
     font-size: 1.575em;
     text-align: right;
-    border: none;
-    padding: 10.5px;
+    border: 4px solid #411c55;
+    padding: 10px;
     border-radius: 6px;
     margin-bottom: 21px;
     color: #2a2929;
@@ -36,7 +36,7 @@ body {
 .num-pad {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10.5px;
+    gap: 10px;
 }
 
 button {
@@ -49,10 +49,11 @@ button {
     cursor: pointer;
     background-color: #8d79bc;
     transition: background-color 0.3s;
+    border-radius: 50%;
 }
 
 button:hover {
-    background-color: #8a75b4;
+    background-color: #b6a1d2;
 }
 
 button:active {
@@ -60,24 +61,23 @@ button:active {
 }
 
 button:nth-child(4n) {
-    background-color: #b394d4;
+    background-color: #c394d4;
 }
 
 button:nth-child(4n):hover {
-    background-color: #c1a1de;
+    background-color: #d3b8e5;
 }
 
 button:nth-child(4n):active {
     background-color: #9f85c2;
 }
 
-
 button:first-child {
     background-color: #8a5b9e;
 }
 
 button:first-child:hover {
-    background-color: #a26fb6;
+    background-color: #b88ec9;
 }
 
 button:first-child:active {
